# wgms3d

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  NOTES  README  TODO  complex_functions.h  config.h.in  configure  configure.ac  diffops.cc  diffops.h  fortran_interface.h  geometry.h  main.cc  make_unique.h  mgp.cc  mgp.h  solver.h  solver_superlu_arpack.cc  sparse.h  wgms3d.cc  wgms3d.h
matlab/: Makefile.in  wgms3d_plot_contours.m  wgms3d_plot_quiver.m
tests/: Makefile.in
tests/all_field_components/: Makefile.in
tests/complex_modes/: Makefile.in
tests/disk_resonator/: Makefile.in
tests/fiber_convergence/: Makefile.in
tests/lossy_materials/: Makefile.in
tests/semivectorial/: Makefile.in
tests/silicon_strip_waveguide/: Makefile.in
tests/tm2te_leakage/: Makefile.in
